# ida-pro-mcp-enhancement

./: .gitignore  README.en.md  README.md  USAGE_CN.md  pyproject.toml
.cursor/commands/: gitmessage.md
docs/: MCP_TOOL_TEST_PROMPT.md
skills/reverse-engineering/: SKILL.md
src/ida_pro_mcp/: coordinator.py  ida_mcp.py  idalib_server.py  install.py  server.py  tool_registry.py
src/ida_pro_mcp/broker/: cache_handlers.py  cache_types.py  client.py  combined.py  manager.py  server.py  sqlite_cache.py  sqlite_query.py
src/ida_pro_mcp/ida_mcp/: __init__.py  api_analysis.py  api_core.py  api_discovery.py  api_instances.py  api_memory.py  api_modify.py  api_resources.py  api_types.py  sync.py  utils.py
src/ida_pro_mcp/ida_mcp/tests/: test_server.py
src/ida_pro_mcp/ida_mcp/zeromcp/: jsonrpc.py  mcp.py
tests/: test_server_transport.py
